tar.gz模式打包，和fastjar二选一